fix new overflow style bug. use current style on ec5 nav

--- a/_scss/_components.nav.scss
+++ b/_scss/_components.nav.scss
@@ -48,12 +48,13 @@ $nav-height: 51px;
 
             .new {
                 display: inline-block;
-                padding: 2px 5px;
+                padding: 0 5px;
                 background-color: $clr-secondary;
                 color: #fff;
                 font-size: 12px;
                 border-radius: 3px;
                 transform: scale(0.65);
+                vertical-align: top;
             }
         }
         &.open {
